[package]
name = "psutil"
version = "1.7.0"
authors = ["Sam Clements <sam@borntyping.co.uk>"]
description = "Process monitoring library"
repository = "https://github.com/borntyping/rust-psutil"
readme = "README.md"
license = "MIT"
edition = "2018"

[dependencies]
libc = ">= 0.1.4"
lazy_static = "1"
num-traits = "0.2"
num-derive = "0.3"
errno = "0.2.4"
